# mutual-auth-rust

./: Cargo.toml  README.md
certs/: create-cert.sh
certs/ca/: ca.crt  ca.key
certs/client/: heiko.crt  heiko.csr  heiko.key
certs/server/: client-ssl.bauland42.com.crt  client-ssl.bauland42.com.csr  client-ssl.bauland42.com.key
src/: lib.rs
