[package]
name = "mutual-auth-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
openssl = "0.10.55"
tokio = { version = "1.29.1", features = ["full"] }
tokio-openssl = "0.6.3"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.70"
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = { version = "*" }
tokio-stream = { version = "*" }
